feat: 修复了一些已知问题